[package]
name = "rust-smb"
version = "0.1.0"
description = "type-safe libsmbclient wrapper"
authors = ["Michelle Zhong <mzhong215@cable.comcast.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
libc = "~0.2"
log = "~0.4"
rust-smbclient-sys = {git = "https://github.com/mhu-tnl/rust_smbclient_sys.git"}
bitflags = "1.3.2"
nix = "0.11"
chrono = "0.4.6"
nom = "4.1.1"
percent-encoding = "1.0.1"
lazy_static = "1.2.0"
derive-error = "0.0.4"
